--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Nimmi</span>
       </h1>
       <p class="two" id="greetingText">I really like your name btw!</p>
     </div>
@@ -47,7 +47,8 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">We’ve shared so much with each other, and I hope you know how much I appreciate you. I am grateful for this day and for all you do.
+      </h5>
       </div>
     </div>
     <div class="seven">
